--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,26 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Make all clickable elements show pointer cursor */
+a,
+button,
+[role="button"],
+input[type="submit"],
+input[type="button"],
+input[type="radio"],
+input[type="checkbox"],
+select,
+label[for],
+.cursor-pointer {
+  cursor: pointer;
+}
+
+/* Interactive elements */
+input[type="range"]::-webkit-slider-thumb {
+  cursor: pointer;
+}
+
+input[type="range"]::-moz-range-thumb {
+  cursor: pointer;
+}
